changes made to vue

--- a/menu.html
+++ b/menu.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MyFit Tracker</title>
+    <title>Fittness-Tracker</title>
 
      <link rel="stylesheet" href="No Framework/external.css">
     </head>
     <body>
-      <h1> MyFit Tracker</h1>
+      <h1>Fittness-Tracker</h1>
       <nav id="navbar" class="topnav"></nav>
         <div class="dropdown">
           <span><strong>Home</strong></span>
@@ -16,30 +16,23 @@
         <div class="dropdown">
           <span><strong>About</strong></span>
             <div class="dropdown-content">
-              <h4>About us</h4>  
-              <h4>Community Support</h4>
               </div>
         </div>
         <div class="dropdown">
-          <span><strong>Track</strong></span>
+          <span><strong>Contact Me</strong></span>
             <div class="dropdown-content">
-              <h4>Activity</h4>
-              <h4>Log</h4>
-              <h4>Share</h4>
               </div>
         </div>
         <div class="dropdown">
-          <span><strong>Register</strong></span>
+          <span><strong>Sign-Up</strong></span>
             <div class="dropdown-content">
-              <h4>New User</h4>  
+              <h4>Exercise</h4>  
               <h4>Returning User</h4>
               </div>
         </div>
-        <div class="dropdown">
-          <span><strong>User Support</strong></span>
             <div class="dropdown-content">
-              <h4>Call</h4>  
-              <h4>Chat</h4>
+              <h4>Home</h4>  
+              <h4>Contact mE</h4>
               <h4>Email</h4>
               </div>
         </div>
